feat: Add schema listing and upload
